// To generate auto code from proto, run this :-
// protoc -Istreaming-api/proto --go_out=. --go_opt=module=github.com/sayeed1999/grpc-go-course --go-grpc_out=. --go-grpc_opt=module=github.com/sayeed1999/grpc-go-course streaming-api/proto/stream.proto


syntax = "proto3";

package stream;

option go_package = "github.com/sayeed1999/grpc-go-course/streaming-api/proto";

message PrimesRequest {
    int64 num = 1;
}

message WordRequest {
    string word = 1;
}

message MaximumRequest {
    int32 num = 1;
}

message PrimesResponse {
    int64 prime = 1;
}

message SentenceResponse {
    string sentence = 1;
}

message MaximumResponse {
    int32 num = 1;
}

message SqrtRequest {
    int32 number = 1;
}

message SqrtResponse {
    double result = 1;
}

service PrimesService {
    // Server streaming
    rpc GetAllPrimes (PrimesRequest) returns (stream PrimesResponse);
    
    // Client streaming
    rpc GetWholeSentenceFromBrokenWords (stream WordRequest) returns (SentenceResponse);

    // Bi-directional streaming
    rpc GetCurrentMaximum (stream MaximumRequest) returns (stream MaximumResponse);

    // Unary streaming
    rpc Sqrt (SqrtRequest) returns (SqrtResponse);
}
